--- a/k8s-cluster/mysql/deploy/cr.yaml
+++ b/k8s-cluster/mysql/deploy/cr.yaml
@@ -40,8 +40,9 @@ spec:
 #    readinessDelaySec: 15
 #    livenessDelaySec: 600
 #    forceUnsafeBootstrap: false
-#    configuration: |
-#      [mysqld]
+    configuration: |
+      [mysqld]
+      pxc_strict_mode="PERMISSIVE"
 #      wsrep_debug=ON
 #      wsrep_provider_options="gcache.size=1G; gcache.recover=yes"
 #      [sst]
@@ -76,11 +77,11 @@ spec:
     resources:
       requests:
         memory: 2Gi
-        cpu: 250m
+        cpu: 500m
 #        ephemeral-storage: 1G
       limits:
-        memory: 6Gi
-        cpu: "2"
+        memory: 2Gi
+        cpu: 500m
 #        ephemeral-storage: 1G
 #    nodeSelector:
 #      disktype: ssd
