--- a/k8s-cluster/istio/ingress/deploy/ingress.yaml
+++ b/k8s-cluster/istio/ingress/deploy/ingress.yaml
@@ -163,3 +163,60 @@ spec:
         host: "metabase.metabase.svc.cluster.local"
         port:
           number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: jhubproxy-virtual-service
+spec:
+  hosts:
+  - "jhub.it.vsmart00.com"
+  gateways:
+  - haruband-ingress-gateway
+  http:
+  - match:
+    - uri:
+        prefix: "/"
+    route:
+    - destination:
+        host: "proxy-public.jhub.svc.cluster.local"
+        port:
+          number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: airflow-virtual-service
+spec:
+  hosts:
+  - "airflow.it.vsmart00.com"
+  gateways:
+  - haruband-ingress-gateway
+  http:
+  - match:
+    - uri:
+        prefix: "/"
+    route:
+    - destination:
+        host: "airflow-webserver.airflow.svc.cluster.local"
+        port:
+          number: 8080
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: grafana-virtual-service
+spec:
+  hosts:
+  - "grafana.it.vsmart00.com"
+  gateways:
+  - haruband-ingress-gateway
+  http:
+  - match:
+    - uri:
+        prefix: "/"
+    route:
+    - destination:
+        host: "grafana.lens-metrics.svc.cluster.local"
+        port:
+          number: 3000
