--- a/k8s-cluster/mongodb/deploy/operator.yaml
+++ b/k8s-cluster/mongodb/deploy/operator.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         name: percona-server-mongodb-operator
+        sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: percona-server-mongodb-operator
       containers:
